Documentar. Solucionar algunos errores